deleted stop words

--- a/filtering.ipynb
+++ b/filtering.ipynb
@@ -10,9 +10,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 164,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>captions</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>index</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>35772577</th>\n",
+       "      <td>[a blurry image of a person walking across a s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35997921</th>\n",
+       "      <td>[a very blurry view of a green street sign, th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35897205</th>\n",
+       "      <td>[an open balcony is seen from outside near som...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35835335</th>\n",
+       "      <td>[a large white house with lots of windows]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35999645</th>\n",
+       "      <td>[a sign on a building displays information to ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   captions\n",
+       "index                                                      \n",
+       "35772577  [a blurry image of a person walking across a s...\n",
+       "35997921  [a very blurry view of a green street sign, th...\n",
+       "35897205  [an open balcony is seen from outside near som...\n",
+       "35835335         [a large white house with lots of windows]\n",
+       "35999645  [a sign on a building displays information to ..."
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import ast\n",
     "import pandas as pd\n",
@@ -28,14 +96,12 @@
     "\n",
     "df_captions['captions'] = df_captions['captions'].apply(string_to_list_of_lists)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n"
+    "df_captions.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -90,38 +156,232 @@
        "      <td>166</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>room</td>\n",
+       "      <td>165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>505</th>\n",
-       "      <td>taking</td>\n",
-       "      <td>1</td>\n",
+       "      <th>6</th>\n",
+       "      <td>an</td>\n",
+       "      <td>122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>506</th>\n",
-       "      <td>driveway</td>\n",
-       "      <td>1</td>\n",
+       "      <th>7</th>\n",
+       "      <td>in</td>\n",
+       "      <td>101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>507</th>\n",
-       "      <td>housing</td>\n",
-       "      <td>1</td>\n",
+       "      <th>8</th>\n",
+       "      <td>is</td>\n",
+       "      <td>98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>508</th>\n",
-       "      <td>3c</td>\n",
-       "      <td>1</td>\n",
+       "      <th>9</th>\n",
+       "      <td>blurry</td>\n",
+       "      <td>78</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>509</th>\n",
-       "      <td>trim</td>\n",
-       "      <td>1</td>\n",
+       "      <th>10</th>\n",
+       "      <td>living</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>white</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>image</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>large</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>has</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>kitchen</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>bed</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>empty</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>this</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>house</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>bedroom</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>on</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>bathroom</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>table</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>photo</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>area</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>furniture</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>some</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>two</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>view</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>that</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>to</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>chairs</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>wood</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>floors</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>window</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>wooden</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>it</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>there</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>picture</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>building</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>dining</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>small</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>sink</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>door</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>very</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>trees</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>walls</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>modern</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>floor</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>510 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -131,17 +391,54 @@
        "2        with   207\n",
        "3          of   195\n",
        "4         the   166\n",
-       "..        ...   ...\n",
-       "505    taking     1\n",
-       "506  driveway     1\n",
-       "507   housing     1\n",
-       "508        3c     1\n",
-       "509      trim     1\n",
-       "\n",
-       "[510 rows x 2 columns]"
+       "5        room   165\n",
+       "6          an   122\n",
+       "7          in   101\n",
+       "8          is    98\n",
+       "9      blurry    78\n",
+       "10     living    69\n",
+       "11      white    64\n",
+       "12      image    57\n",
+       "13      large    57\n",
+       "14        has    54\n",
+       "15    kitchen    48\n",
+       "16        bed    48\n",
+       "17      empty    46\n",
+       "18       this    46\n",
+       "19      house    44\n",
+       "20    bedroom    43\n",
+       "21         on    40\n",
+       "22   bathroom    36\n",
+       "23      table    32\n",
+       "24      photo    31\n",
+       "25       area    30\n",
+       "26  furniture    27\n",
+       "27       some    27\n",
+       "28        two    27\n",
+       "29       view    26\n",
+       "30       that    25\n",
+       "31         to    25\n",
+       "32     chairs    25\n",
+       "33       wood    24\n",
+       "34     floors    24\n",
+       "35     window    24\n",
+       "36     wooden    23\n",
+       "37         it    23\n",
+       "38      there    22\n",
+       "39    picture    20\n",
+       "40   building    20\n",
+       "41     dining    20\n",
+       "42      small    20\n",
+       "43       sink    19\n",
+       "44       door    19\n",
+       "45       very    18\n",
+       "46      trees    18\n",
+       "47      walls    18\n",
+       "48     modern    18\n",
+       "49      floor    17"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +466,73 @@
     "\n",
     "# Create a dataframe with the sorted words and their frequencies\n",
     "df_word_freq = pd.DataFrame(sorted_word_freq, columns=['word', 'freq'])\n",
-    "print(df_word_freq)\n"
+    "\n",
+    "\n",
+    "df_word_freq.head(50)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         word  freq\n",
+      "0        room   165\n",
+      "1      blurry    78\n",
+      "2      living    69\n",
+      "3       white    64\n",
+      "4       image    57\n",
+      "..        ...   ...\n",
+      "485    taking     1\n",
+      "486  driveway     1\n",
+      "487   housing     1\n",
+      "488        3c     1\n",
+      "489      trim     1\n",
+      "\n",
+      "[490 rows x 2 columns]\n",
+      "     word  freq\n",
+      "0       a   579\n",
+      "1     and   215\n",
+      "2    with   207\n",
+      "3      of   195\n",
+      "4     the   166\n",
+      "6      an   122\n",
+      "7      in   101\n",
+      "8      is    98\n",
+      "14    has    54\n",
+      "21     on    40\n",
+      "30   that    25\n",
+      "31     to    25\n",
+      "37     it    23\n",
+      "64   from    10\n",
+      "70    for     9\n",
+      "73    are     9\n",
+      "80     by     8\n",
+      "150    as     3\n",
+      "207    at     2\n",
+      "265    be     1\n"
+     ]
+    }
+   ],
+   "source": [
+    "stop_words = [\n",
+    "    \"a\", \"an\", \"and\", \"are\", \"as\", \"at\", \"be\", \"by\", \"for\", \"from\",\n",
+    "    \"has\", \"he\", \"in\", \"is\", \"it\", \"its\", \"of\", \"on\", \"that\", \"the\",\n",
+    "    \"to\", \"was\", \"were\", \"will\", \"with\"\n",
+    "]\n",
+    "\n",
+    "# Remove the stop words from the dataframe and put them in a dataframe of their own\n",
+    "df_stop_words = df_word_freq[df_word_freq['word'].isin(stop_words)]\n",
+    "df_word_freq = df_word_freq[~df_word_freq['word'].isin(stop_words)]\n",
+    "df_word_freq = df_word_freq.reset_index(drop=True)\n",
+    "\n",
+    "print(df_word_freq)\n",
+    "print(df_stop_words)\n"
    ]
   }
  ],
