--- a/filtering.ipynb
+++ b/filtering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "35999645  [a sign on a building displays information to ..."
       ]
      },
-     "execution_count": 178,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,6 +84,7 @@
    "source": [
     "import ast\n",
     "import pandas as pd\n",
+    "import json as js\n",
     "\n",
     "df_captions = pd.read_csv('captions.csv', index_col=0)\n",
     "\n",
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +439,7 @@
        "49      floor    17"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -530,290 +531,20 @@
        "      <td>image</td>\n",
        "      <td>57</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>large</td>\n",
-       "      <td>57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>kitchen</td>\n",
-       "      <td>48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>bed</td>\n",
-       "      <td>48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>empty</td>\n",
-       "      <td>46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>this</td>\n",
-       "      <td>46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>house</td>\n",
-       "      <td>44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>bedroom</td>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>bathroom</td>\n",
-       "      <td>36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>table</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>photo</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>area</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>furniture</td>\n",
-       "      <td>27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>some</td>\n",
-       "      <td>27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>two</td>\n",
-       "      <td>27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>view</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>chairs</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>wood</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>floors</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>window</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>wooden</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>there</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>picture</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>building</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>dining</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>small</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>sink</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>door</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>very</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>trees</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>walls</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>modern</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>floor</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>wall</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>open</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>shows</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>black</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>blue</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>next</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>green</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>outside</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>shower</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>couch</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>front</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>windows</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>photograph</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          word  freq\n",
-       "0         room   165\n",
-       "1       blurry    78\n",
-       "2       living    69\n",
-       "3        white    64\n",
-       "4        image    57\n",
-       "5        large    57\n",
-       "6      kitchen    48\n",
-       "7          bed    48\n",
-       "8        empty    46\n",
-       "9         this    46\n",
-       "10       house    44\n",
-       "11     bedroom    43\n",
-       "12    bathroom    36\n",
-       "13       table    32\n",
-       "14       photo    31\n",
-       "15        area    30\n",
-       "16   furniture    27\n",
-       "17        some    27\n",
-       "18         two    27\n",
-       "19        view    26\n",
-       "20      chairs    25\n",
-       "21        wood    24\n",
-       "22      floors    24\n",
-       "23      window    24\n",
-       "24      wooden    23\n",
-       "25       there    22\n",
-       "26     picture    20\n",
-       "27    building    20\n",
-       "28      dining    20\n",
-       "29       small    20\n",
-       "30        sink    19\n",
-       "31        door    19\n",
-       "32        very    18\n",
-       "33       trees    18\n",
-       "34       walls    18\n",
-       "35      modern    18\n",
-       "36       floor    17\n",
-       "37        wall    15\n",
-       "38        open    15\n",
-       "39       shows    13\n",
-       "40       black    13\n",
-       "41        blue    13\n",
-       "42        next    13\n",
-       "43       green    12\n",
-       "44     outside    12\n",
-       "45      shower    12\n",
-       "46       couch    12\n",
-       "47       front    12\n",
-       "48     windows    11\n",
-       "49  photograph    11"
+       "     word  freq\n",
+       "0    room   165\n",
+       "1  blurry    78\n",
+       "2  living    69\n",
+       "3   white    64\n",
+       "4   image    57"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,15 +561,54 @@
     "df_word_freq = df_word_freq[~df_word_freq['word'].isin(stop_words)]\n",
     "df_word_freq = df_word_freq.reset_index(drop=True)\n",
     "\n",
-    "df_word_freq.head(50)"
+    "df_word_freq.head()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a very blurry view of a green street sign',\n",
+       " 'the camera can be seen in this image of a park',\n",
+       " 'a view from the outside of a house',\n",
+       " 'a bathroom with a walk in shower and sink',\n",
+       " 'there is a blurry image of a living room and dining area',\n",
+       " 'this is an image of a home kitchen']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selected_words = [\"room\", \"living\"]\n",
+    "\n",
+    "\n",
+    "def is_in_caption(caption_list, word):\n",
+    "    return word in caption_list\n",
+    "\n",
+    "for word in selected_words:\n",
+    "    # Create a column with the word as the name and the the value 0 for each row\n",
+    "    if word not in df_captions.columns:\n",
+    "        df_captions.insert(len(df_captions.columns), word, is_in_caption(df_captions['captions'], 0))\n",
+    "    \n",
+    "    # Set the value to 1 if the word is in the caption\n",
+    "    df_captions[word] = df_captions['captions'].apply(is_in_caption, args=(word,))\n",
+    "\n",
+    "\n",
+    "\n",
+    "df_captions.captions.iloc[1]\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
