corrected a small error

--- a/data_viz_example.ipynb
+++ b/data_viz_example.ipynb
@@ -39122,7 +39122,7 @@
    ],
    "source": [
     "for cols in df.columns: \n",
-    "    print('cols :'df[cols].isna().sum())\n",
+    "    print('cols :',df[cols].isna().sum())\n",
     "        "
    ]
   },
