--- a/filtering.ipynb
+++ b/filtering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "35999645  [a sign on a building displays information to ..."
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "49      floor    17"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "4   image    57"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,43 +567,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                   captions  room elegant  \\\n",
+      "index                                                                       \n",
+      "35772577  [a blurry image of a person walking across a s...  True    None   \n",
+      "35997921  [a very blurry view of a green street sign, th...  True    None   \n",
+      "35897205  [an open balcony is seen from outside near som...  True    None   \n",
+      "35835335         [a large white house with lots of windows]  None    None   \n",
+      "35999645  [a sign on a building displays information to ...  True    None   \n",
+      "...                                                     ...   ...     ...   \n",
+      "35997109  [a kitchen with a small table, stove and cabin...  True    None   \n",
+      "35734739  [a man\\s bathroom with some tools hanging from...  True    None   \n",
+      "36003641  [a blurry photo of a house and some grass, a g...  None    None   \n",
+      "36037549  [blurry image of man taking picture in front o...  True    None   \n",
+      "36013375  [a picture of some houses near the water, the ...  None    None   \n",
+      "\n",
+      "          pool  \n",
+      "index           \n",
+      "35772577  None  \n",
+      "35997921  None  \n",
+      "35897205  None  \n",
+      "35835335  None  \n",
+      "35999645  None  \n",
+      "...        ...  \n",
+      "35997109  None  \n",
+      "35734739  None  \n",
+      "36003641  None  \n",
+      "36037549  None  \n",
+      "36013375  None  \n",
+      "\n",
+      "[90 rows x 4 columns]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['a very blurry view of a green street sign',\n",
-       " 'the camera can be seen in this image of a park',\n",
-       " 'a view from the outside of a house',\n",
-       " 'a bathroom with a walk in shower and sink',\n",
-       " 'there is a blurry image of a living room and dining area',\n",
-       " 'this is an image of a home kitchen']"
+       "['a living room with lots of furniture and a large window',\n",
+       " 'a room with a wooden bunk bed and a ladder',\n",
+       " 'there is a washing machine in this bathroom',\n",
+       " 'a living room is pictured with an open door',\n",
+       " 'a view of a modern kitchen with wooden cabinets',\n",
+       " 'this house has a large balcony overlooking the pool']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "selected_words = [\"room\", \"living\"]\n",
+    "selected_words = [\"room\",\"elegant\", \"pool\"]\n",
     "\n",
     "\n",
     "def is_in_caption(caption_list, word):\n",
-    "    return word in caption_list\n",
+    "    for captions in caption_list :\n",
+    "        if word in captions:\n",
+    "            return True\n",
     "\n",
     "for word in selected_words:\n",
     "    # Create a column with the word as the name and the the value 0 for each row\n",
     "    if word not in df_captions.columns:\n",
-    "        df_captions.insert(len(df_captions.columns), word, is_in_caption(df_captions['captions'], 0))\n",
+    "        df_captions.insert(len(df_captions.columns), word, 0)\n",
     "    \n",
     "    # Set the value to 1 if the word is in the caption\n",
     "    df_captions[word] = df_captions['captions'].apply(is_in_caption, args=(word,))\n",
     "\n",
     "\n",
     "\n",
-    "df_captions.captions.iloc[1]\n",
+    "# find rows where living is 1\n",
+    "print(df_captions)\n",
+    "\n",
+    "# print the first caption of the rows where elegant is 1\n",
+    "df_captions[df_captions['pool'] == 1]['captions'].iloc[0]\n",
+    "\n",
     "\n",
     "\n",
     "    \n",
@@ -627,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
