finished the preprocess of the dataframe

--- a/filtering.ipynb
+++ b/filtering.ipynb
@@ -587,23 +587,29 @@
     }
    ],
    "source": [
-    "selected_words = [\"room\", \"living\"]\n",
+    "selected_words = [\"room\",\"elegant\", \"pool\"]\n",
     "\n",
     "\n",
     "def is_in_caption(caption_list, word):\n",
-    "    return word in caption_list\n",
+    "    for captions in caption_list :\n",
+    "        if word in captions:\n",
+    "            return True\n",
     "\n",
     "for word in selected_words:\n",
     "    # Create a column with the word as the name and the the value 0 for each row\n",
     "    if word not in df_captions.columns:\n",
-    "        df_captions.insert(len(df_captions.columns), word, is_in_caption(df_captions['captions'], 0))\n",
+    "        df_captions.insert(len(df_captions.columns), word, 0)\n",
     "    \n",
     "    # Set the value to 1 if the word is in the caption\n",
     "    df_captions[word] = df_captions['captions'].apply(is_in_caption, args=(word,))\n",
     "\n",
     "\n",
+    "# find rows where living is 1\n",
+    "print(df_captions)\n",
     "\n",
-    "df_captions.captions.iloc[1]\n",
+    "# print the first caption of the rows where elegant is 1\n",
+    "df_captions[df_captions['pool'] == 1]['captions'].iloc[0]\n",
+    "\n",
     "\n",
     "\n",
     "    \n",
@@ -627,12 +633,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31ff630c6e82ba12fef539dea8022209045e49d81c27e1972fa5386bff428379"
+    "hash": "b58a440e7c41d8e6b23e002dc56fe0c4f343f7392b9b491490b79e5d7e2436cd"
    }
   }
  },
